Attendance Bug fix

--- a/attendance/src/main/resources/application.properties
+++ b/attendance/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jackson.time-zone=UTC
 #CREATE TABLE SCHEMA FOR USE
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
