--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #*** Spring Application Properties ***#
 spring.application.name=api-gateway-service
 server.port=8765
-logging.level.root=DEBUG
+logging.level.root=INFO
 
 
 #*** Spring Cloud Gateway Properties (Providing custom path) hence commented ***#
