--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>5.3.4</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
