--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -7,6 +7,19 @@ spring:
     name: api-gateway-service
   cloud:
     gateway:
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: "http://localhost:3000"
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
+              - OPTIONS
+            allowedHeaders:
+              - "*"
+            allowCredentials: true
       routes:
         - id: User-service
           uri: lb://User-service  # Ensure this matches the application name of your user service
@@ -22,6 +35,7 @@ spring:
             - Path=/roles-permissions/**
     discovery:
       enabled: true  # Enables discovery client integration
+
 
 eureka:
   client:
